raw/Daniswara Nurwijayanti Shafiyyah 6430 245150207111061/2024-11-14-09-05-31.ceg/compilation.txt
NT.java:34: error: cannot find symbol
        Scanner scanner = new Scanner(System.in);
        ^
  symbol:   class Scanner
  location: class NT
NT.java:34: error: cannot find symbol
        Scanner scanner = new Scanner(System.in);
                              ^
  symbol:   class Scanner
  location: class NT
2 errors
Not compiled
